GNOME Bugzilla – Bug 788714
The automatic timezone control doesn't hint it needs location to be enabled
Last modified: 2018-09-11 07:21:36 UTC
The issue has confused some users on GNOME 3.26.1/Ubuntu, if you disable the access to the location service in the privacy panel and go to the date&time panel the "automatic timezone" setting is showed as active but doesn't work. The corresponding line has a subtext into that an internet connection is needed, it should maybe also hint that access to the location is needed or display a warning when the location service is disabled?
See also: https://launchpad.net/bugs/1741928
Created attachment 373412 [details] [review] Greys out automatic timezone if location is disabled in privacy, update comment to reflect the need to enable location
Patch with software and text string change was merged to master, see https://gitlab.gnome.org/GNOME/gnome-control-center/merge_requests/165 Can someone please close this issue? Reopen if needed.