component: panels/datetime

Automatic timezone detection works only if location sharing is enabled in
privacy. It fails if location sharing is disabled.

Automatic timezone setting is grayed out if location sharing is disabled in
privacy settings.

https://bugzilla.gnome.org/show_bug.cgi?id=788714